--- a/src/app/features/gis/components/setups/components/schedule/screen-codes/screen-codes.component.html
+++ b/src/app/features/gis/components/setups/components/schedule/screen-codes/screen-codes.component.html
@@ -1,4 +1,4 @@
-<div class="base-content-section">
+<div class="base-content-section setups">
   <div class="row">
     <div class="col-sm-3 left">
       <div class="card">
@@ -27,7 +27,7 @@
             <div class="spinner" style="position: relative">
               <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
             </div>
-            <div class="screen-code-listing">
+            <div class="listing">
               <ul>
                 <li
                   *ngFor="let screenCode of filteredScreenCodes"
