--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -178,20 +178,20 @@
         </ul>
         <div class="d-flex" id="chart">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" routerLink="./reports"
+            <li class="nav-item" style="font-size: 15px">
+              <a class="nav-link" routerLink="./reports/create-report"
                 ><i
                   class="fa-solid fa-chart-simple"
-                  style="padding-right: 6px; font-size: 20px"
+                  style="padding-right: 6px;"
                 ></i
                 >{{ "lang.new_chart"| translate | uppercase }}</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="font-size: 15px">
               <a class="nav-link" routerLink="./reports"
                 ><i
                   class="fa-solid fa-chart-pie"
-                  style="padding-right: 6px; font-size: 20px"
+                  style="padding-right: 6px;"
                 ></i
                 >{{ "lang.analytics" | translate | uppercase }}</a
               >
