VQ-380: bug fixes on screencodes API call

--- a/src/app/features/gis/components/setups/components/schedule/screen-codes/screen-codes.component.html
+++ b/src/app/features/gis/components/setups/components/schedule/screen-codes/screen-codes.component.html
@@ -88,7 +88,7 @@
                           <option value="Q">Quotation</option>
                           <option value="U">U/W</option>
                           <option value="C">Claims</option>
-                          <option value="p-table">Product</option>
+                          <option value="P">Product</option>
                         </select>
                       </div>
                     </div>
