VQ-313 Added new global css pointer class

--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -395,6 +395,9 @@ color: #00529B;
   padding: 0.6rem 1.3rem;
   font-size: 12px;
 }
+.pointer {
+  cursor: pointer;
+}
 
 /**Gis Setup Start**/
 .leftHeaderTitle {
