VQ-440: Territories screen; VQ-444: Perils Screen

--- a/src/app/features/gis/components/setups/components/class-subclass/classes/classes.component.html
+++ b/src/app/features/gis/components/setups/components/class-subclass/classes/classes.component.html
@@ -1,5 +1,5 @@
 <div class="mx-4 mb-4 mt-4">
-    <p class="float-end mb-4" id="help"><a>Help <i class="pi pi-question-circle"></i></a></p>
+    <p class="text-end mb-4" id="help"><a>Help <i class="pi pi-question-circle"></i></a></p>
     <br>         
     <div class="row">
         <div class="col-md-4" style="max-width: 290px;" >
