--- a/src/app/features/gis/components/setups/components/short-period/standard-short-period-rates/standard-short-period-rates.component.html
+++ b/src/app/features/gis/components/setups/components/short-period/standard-short-period-rates/standard-short-period-rates.component.html
@@ -41,7 +41,7 @@
                     <div class="input-group float-end ml-4" style="width:274px"  id="search-input">
                     
                    
-                      <input class="form-control py-2 border-end-0 border" type="search" placeholder="search...">
+                      <input class="form-control py-2 border-end-0 border" (input)="dt1.filterGlobal($event, 'contains')" type="search" placeholder="search...">
                       <span class="input-group-append">
                           <button class="btn btn border-start-0 border" id="btn" type="button">
                               <i class="fa fa-search" style="color:#8C8C8C"></i>
@@ -114,13 +114,17 @@
                       </div>
                     </div>
                   </div>
-                  <p-table [value]="rates"  
+                  <p-table #dt1 [value]="rates"  
                   selectionMode="single" 
                   [resizableColumns]="true" 
                   styleClass="p-datatable-sm"
                   responsiveLayout="scroll"
                   class='ui-datatable'
-                  [autoLayout]="true" >
+                  [autoLayout]="true"
+                  [globalFilterFields]="['minimum_days', 'maximum_days', 'annual_premium_rate']"
+                  [paginator]="true"
+                  [rows]="5"
+                  >
                     <ng-template pTemplate="header">
                         <tr>
                             <th>From</th>
@@ -142,6 +146,12 @@
                             
                         </tr>
                     </ng-template>
+                    <ng-template pTemplate="paginatorleft">
+                    
+                  </ng-template>
+                  <ng-template pTemplate="paginatorright">
+
+                  </ng-template>
                 </p-table>
             </div>
         </div> 
