--- a/src/app/features/gis/components/setups/components/product/product-setup-wizard/product-setup-wizard.component.html
+++ b/src/app/features/gis/components/setups/components/product/product-setup-wizard/product-setup-wizard.component.html
@@ -354,7 +354,7 @@
                             <label class="labels" for="input">File Name</label>
                           </div>
                           <div class="col-xl-7">
-                            <input type="file"  class="form-control-file" formControlName="name" (change)="handleUpload($event)" required>
+                            <input type="file"  class="form-control-file" formControlName="name" (change)="handleUpload($event)" required style="font-size: 12px;">
           
                           </div>
                         </div>
