--- a/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.css
+++ b/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); */
 
 .title1 {
     font-family: 'Lato';
@@ -167,13 +168,13 @@ input[type="file"]::-webkit-file-upload-button {
 }
 
 .labels {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 14px;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
 
-    color: #000000;
+  color: #000000;
 }
 
 #setup {
